ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-1-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - secretName: cloudflare-secret
    hosts:
    - test1.100xsidd.me
  - secretName: whoami-tls-secret
    hosts:
    - whoami.100xsidd.me
  rules:
  - host: test1.100xsidd.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-1-service
            port:
              number: 8080

  - host: whoami.100xsidd.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoami
            port:
              name: web
